substituted resetPadding with bootstrap spacing, added(ApexChars.module.scss) and interactive sparklines css-fix

--- a/src/components/Widget/Widget.module.scss
+++ b/src/components/Widget/Widget.module.scss
@@ -125,7 +125,7 @@
       }
     }
 
-    .widget-body.p-0 {
+    .widget-body.undo_padding {
       margin: $widget-padding-vertical (-$widget-padding-horizontal) (-$widget-padding-vertical);
 
       + footer {
