--- a/src/pages/analytics/components/BigStat/BigStat.module.scss
+++ b/src/pages/analytics/components/BigStat/BigStat.module.scss
@@ -22,7 +22,3 @@
     }
   }
 }
-
-.resetPadding {
-  padding: 0;
-}
