--- a/src/pages/dashboard/Dashboard.module.scss
+++ b/src/pages/dashboard/Dashboard.module.scss
@@ -21,7 +21,3 @@
     }
   }
 }
-
-.resetPadding {
-  padding: $widget-padding-vertical 0 0;
-}
