--- a/src/pages/extra/invoice/Invoice.module.scss
+++ b/src/pages/extra/invoice/Invoice.module.scss
@@ -15,7 +15,3 @@
     }
   }
 }
-
-.resetPadding {
-  padding: 0;
-}
