--- a/src/pages/grid/Grid.module.scss
+++ b/src/pages/grid/Grid.module.scss
@@ -78,7 +78,3 @@
 .customGrayBg {
   background-color: $gray-700;
 }
-
-.resetPadding {
-  padding: $widget-padding-vertical 0 0;
-}
