--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -147,6 +147,8 @@ table > thead > tr > th {
 /* --------- Stats Row --------- */
 .stats-row {
   margin-bottom: 1.25rem;
+  display: flex;
+  align-items: center;
 }
 
 .stat-item {
